--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ g.chordsBox:hover path.fade {
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.v3.js"></script>
 <script src="js/names.js"></script>
 
 <script>
@@ -78,26 +78,21 @@ var outsideArc = d3.svg.arc()
 	.outerRadius(radius)
 	.innerRadius(radius);
 	
-var layout = d3.layout.chord()
-    .padding(.04)
-    /*.sortSubgroups(d3.descending)
-    .sortChords(d3.ascending);*/
-
-var path = d3.svg.chord()
-    .radius(radius);
+var insideArc = d3.svg.arc()
+	.outerRadius(innerPieRadius)
+	.innerRadius(innerPieRadius);
 	
-/*var line = d3.svg.line.radial()
+/*var arcLine = d3.svg.line.radial()
     .interpolate("bundle")
     .tension(.85)
-    .radius(function(d) { return d.y; })
-    .angle(function(d) { return d.x / 180 * Math.PI; });
+    .radius(function(d) { return d[0]; })
+    .angle(function(d) { return d[1] / 180 * Math.PI; });*/
 	
-var line = d3.svg.line()
-    .x(function(d) { return d.x; })
-    .y(function(d) { return d.y; })
-    .interpolate("basis");*/
+var arcLine = d3.svg.line()
+    .x(function(d) { return d[0] })
+    .y(function(d) { return d[1]; })
+    .interpolate("basis-open");
 	
-var matrixData = [];
 
 svg.attr("transform", "translate(" + (page.width - width)/2 + "," + (page.height-height)/ 2 + ")");
 svg.select('g.chordsBox').attr("transform", "translate(" + radius + ", " + radius + ")");
@@ -114,6 +109,7 @@ function getData (){
 	});
 }
 
+/*var matrixData = [];
 function generateRandomMatrix() {	
 	for (var i = 0; i < dataLength; i++) {
 		var matrixRow = [];
@@ -127,19 +123,28 @@ function generateRandomMatrix() {
 		matrixData.push(matrixRow);
 	}
 }
+*/
+//generateRandomMatrix();
 
-generateRandomMatrix();
-change(getData());
+function getClassName(nameString) {
+	return nameString.replace(/[ '\-()\.]+/g, "");
+}
 
-function change(data) {
+updateData(getData(), connections);
+
+function updateData(data, connections) {
 	//console.log(data);
-
+	//console.log(pie(data));
+	
 	/* ------- PIE SLICES -------*/
 	var sliceParents = svg.select('g.pieSliceBox').selectAll("g")
 		.data(pie(data), key)
 		.enter()
 		.append("g")
-		.attr("transform", "translate(" + radius + ", " + radius + ")");
+		.attr("transform", "translate(" + radius + ", " + radius + ")")
+		.attr("class", function(d, i) {
+			return "slice-" + getClassName(d.data.label) + " index-" + i;
+		});
 
 	sliceParents.append("path")
 		.attr('d', arc)
@@ -188,21 +193,51 @@ function change(data) {
 		return [outsideArc.centroid(d), textArc.centroid(d)];		
 	})
 	
-	console.log(matrixData);
-	
-	layout.matrix(matrixData);
-	var chord = svg.select('g.chordsBox').selectAll(".chord")
-		.data(layout.chords)
-		.enter().append("path")
-		.attr("class", "chord")
-		.style("fill", function(d) { return '#333' })
-		.attr("d", path)
+	/* ----- ARCS -------*/
+	//console.log(connections);
+	var arcGroups = svg.select('g.chordsBox').selectAll("g")
+		.data(connections)
+		.enter()
+		.append("g")
+		.attr("class", function(d) {
+			return "arcGroup-" + getClassName(d.name);
+		})
+		
+	var arcs = arcGroups.selectAll("path")
+		.data(function(d) {
+			//only create paths for slices that exist in curr view
+			var existingConnections = [];
+			for (var j = 0; j < d.links.length; j++) {
+				//console.log(svg.select('g.slice-' + getClassName(d.links[j])).size());
+				if (svg.select('g.slice-' + getClassName(d.links[j])).size() > 0) {
+					existingConnections.push(d.links[j]);
+				}
+			}
+			return existingConnections;
+		})
+		.enter()
+		.append("path")
+		.style("stroke", function(d) { return '#333' })
+		.attr("d", function(d) {
+			//console.log(d);
+			//console.log(d3.select(this.parentNode).datum().name);
+			var startSliceData = svg.select('g.slice-' + getClassName(d3.select(this.parentNode).datum().name)).datum();
+			var endSliceData = svg.select('g.slice-'  + getClassName(d)).datum();
+			//console.log(insideArc.centroid(startSliceData));
+			
+			return arcLine([insideArc.centroid(startSliceData), insideArc.centroid(endSliceData)]);
+			
+			//var currSliceData = svg.select('g.slice-' + getClassName(d.name));
+			//return currSlice.size();
+		})
 		.on("mouseover", function (d, i) {
 			chord.classed("fade", function(p) {
       			return p.source.index != i
           		&& p.target.index != i;
    		  	})
 		})
+	
+
 	
 };
 
