--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <div id="vis-chart" class="component">
 </div>
-<script src="http://d3js.org/d3.v3.js"></script>
+<!--<script src="http://d3js.org/d3.v3.js"></script>-->
+<script src="../js/d3.min.js"></script>
 <script src="js/fake-data.js"></script>
 <script src="js/global.js"></script>
 <!-- COMPONENT SCRIPTS COME AFTER GLOBAL.JS -->
