circular barchart, modes
--circular barchart now included
--mode button to demonstrate switching between bars and chords
--updated naming for global settings
--added in fake bar chart data and updated fake regular data
(fake-dataB)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div id="vis-pie" class="component">
         <!-- DELETE THIS FILLER WHEN INTEGRATE WITH FILTER COMPONENT -->
         <button id="sorter">Sort!</button>
-        <button id="color-coder">Color code!</button>
-        <br />
+        <button id="color-coder">Color code!</button> | 
         <button id="adder">Add More Data!</button>
-        <button id="remover">Remove Data!</button>
+        <button id="remover">Remove Data!</button> | 
+        <button id="mode-changer">Mode!</button>
         <!-- END DELETE THIS FILLER WHEN INTEGRATE WITH FILTER COMPONENT -->
         <svg>
             <g id="pieBox">
@@ -47,7 +47,8 @@
     </div>
     <script src="http://d3js.org/d3.v3.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="js/fake-data.js"></script>
+    <script src="js/fake-dataB.js"></script>
+    <script src="js/fake-data-bars.js"></script>
     <script src="js/global.js"></script>
     <!-- COMPONENT SCRIPTS COME AFTER GLOBAL.JS -->
     <script src="js/pie.js"></script>
