working with example end point, fake chords + bars
--pie slice generation with real data (no filters working)
--chord data now also tied to index location of char slice (so that
update called correctly)
--misc style edits to detail pane

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                     <h3 id="detail-title" class="panel-title"></h3>
                 </div>
                 <img id="detail-image" alt="character image" />
+                <div id="bio"></div>
+                <p id="detail-read-more"><a href="">Read more on Wikia</a></p>
             </div>
             <table id="detail-table">
                 <tr><th>Affiliation(s)</th><td id="detail-affil"></td></tr>
@@ -124,7 +126,6 @@
                 <tr><th>Introduced</th><td id="detail-year"></td></tr>
                 <tr id="detail-connections"><th>Connections</th><td></td></tr>
             </table>
-            <p id="detail-read-more"><a href="">Read more on Wikia</a></p>
         </div>
         <div id="relationship-detail">
         	<h3 id="comic-head"></h3>
