clear all select, bubble outlines, mode change fixes
--from previous commits:
---new callback handler for getData when finish pulling chords or bars
data

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <div id="vis-pie" class="component">
         <!-- DELETE THIS FILLER WHEN INTEGRATE WITH FILTER COMPONENT -->
         <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="clearer">Clear All Selections</button>
         <button type="button" class="btn btn-default" id="sorter">Sort!</button>
         <button type="button" class="btn btn-default" id="color-coder">Color code!</button> 
         <button type="button" class="btn btn-default" id="adder">Add More Data!</button>
